cargo-dist/tests/snapshots/error_manifest.snap
---
source: cargo-dist/tests/cli-tests.rs
expression: format_outputs(&output)
---
stdout:
{"diagnostic": {"message": "This workspace doesn't have anything for dist to Release!","severity": "error","causes": [],"help": "You may need to pass the current version as --tag, or need to give all your packages the same version\n\nHere are some options:\n\n--tag=v1.0.0-FAKEVERSION-tinymist.1 will Announce: cargo-dist\n\nyou can also request any single package with --tag=cargo-dist-v1.0.0-FAKEVERSION-tinymist.1\n","labels": [],"related": []}}

stderr:
  × This workspace doesn't have anything for dist to Release!
  help: You may need to pass the current version as --tag, or need to give all your packages the same version
        
        Here are some options:
        
        --tag=v1.0.0-FAKEVERSION-tinymist.1 will Announce: cargo-dist
        
        you can also request any single package with --tag=cargo-dist-v1.0.0-FAKEVERSION-tinymist.1
